# yarrbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose-integrationtest.yml  integrationtest.env  rustfmt.toml
.github/workflows/: docker-publish.yml
crate/common/: Cargo.toml
crate/db/src/: enums.rs  models.rs  schema.rs
crate/db/src/actions/: matrix_room_actions.rs  user_actions.rs  webhook_actions.rs
crate/webhook_api/: Cargo.toml
crate/webhook_api/src/: lib.rs  yarrbot_api_error.rs
crate/webhook_api/src/extractors/: webhook_extractor.rs
crates/common/: Cargo.toml
crates/common/src/: environment.rs  environment_variables.rs  lib.rs  short_id.rs  shutdown.rs
crates/common/src/crypto/: mod.rs
crates/common/src/shutdown/: mod.rs  shutdown_actor.rs  shutdown_notice.rs  subscribe_to_shutdown.rs
crates/db/: Cargo.toml
crates/db/src/: diesel_types.rs  enums.rs  lib.rs  models.rs  pool_helper.rs  schema.rs
crates/db/src/actions/: matrix_room_actions.rs  mod.rs  user_actions.rs  webhook_actions.rs
crates/matrix_client/: Cargo.toml
crates/matrix_client/src/: command_parser.rs  lib.rs  message.rs
crates/matrix_client/src/client/: configuration.rs  initialization.rs  mod.rs  on_room_message.rs  on_stripped_state_member.rs  room_message_actor.rs  stripped_state_member_actor.rs
crates/matrix_client/src/commands/: help_command.rs  mod.rs  ping_command.rs  sourcecode_command.rs  webhook_command.rs
crates/matrix_client/src/commands/webhook/: add.rs  list.rs  mod.rs  remove.rs
crates/matrix_client/src/message/: message_data.rs  message_data_builder.rs  mod.rs
crates/matrix_client/src/send_handler/: actor.rs  mod.rs  send_to_matrix.rs
crates/matrix_client/src/sync_handler/: actor.rs  mod.rs
crates/webhook_api/: Cargo.toml
crates/webhook_api/src/: lib.rs  yarrbot_api_error.rs  yarrbot_root_span.rs
crates/webhook_api/src/extractors/: mod.rs  webhook_extractor.rs
crates/webhook_api/src/facades/: mod.rs  radarr_facade.rs  radarr_matrix_facade.rs  sonarr_facade.rs  sonarr_matrix_facade.rs
crates/webhook_api/src/models/: common.rs  mod.rs  radarr.rs  sonarr.rs
crates/webhook_api/src/models/radarr/: mod.rs  movie.rs  movie_file.rs  release.rs  remote_movie.rs
crates/webhook_api/src/models/sonarr/: episode.rs  episode_deleted_file.rs  episode_file.rs  episode_list.rs  extended_episode.rs  extended_episode_rating.rs  mod.rs  quality.rs  quality_model.rs  release.rs  renamed_episode_file.rs  series.rs
crates/webhook_api/tests/: common.rs  common_index_integration_tests.rs
docker/scripts/: docker-entrypoint.sh
migrations/2021-07-17-205650_initial_schema/: down.sql  up.sql
migrations/2021-09-16-000130_drop_arr_type/: down.sql  up.sql
migrations/2021-10-14-001021_add_server_name/: down.sql  up.sql
migrations_testing/2021-08-08-214034_initial_data/: down.sql  up.sql
src/: first_time_initialization.rs  initialization.rs  main.rs  matrix_initialization.rs  web_initialization.rs
yarrbot/: Cargo.toml
yarrbot/src/: main.rs
