[package]
name = "yarrbot"
version = "0.5.1"
edition = "2018"

[[bin]]
name = "yarrbot"
path = "src/main.rs"

[workspace]
members = [
    "crates/db",
    "crates/webhook_api",
    "crates/common",
    "crates/matrix_client"
]

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.42"
actix-web = {version = "4.0.0-beta.8"}
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-actix-web = "0.4.0-beta.12"
tracing-log = "0.1.2"
tracing-appender = "0.1.2"
url = "2.2.2"
tokio = { version = "1", features = ["rt", "sync", "signal", "macros", "time"] }
yarrbot_common = { path = "crates/common" }
yarrbot_db = { path = "crates/db" }
yarrbot_webhook_api = { path = "crates/webhook_api" }
yarrbot_matrix_client = { path = "crates/matrix_client" }
