[package]
name = "yarrbot"
version = "0.5.6"
edition = "2021"

[[bin]]
name = "yarrbot"
path = "src/main.rs"

[workspace]
members = [
    "crates/db",
    "crates/webhook_api",
    "crates/common",
    "crates/matrix_client"
]

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.42"
actix-web = {version = "4.0.0-beta.8"}
actix = "0.12"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-actix-web = "0.4.0-beta.12"
tracing-log = "0.1.2"
tracing-appender = "0.1.2"
tokio = { version = "1" }
yarrbot_common = { path = "crates/common" }
yarrbot_db = { path = "crates/db" }
yarrbot_webhook_api = { path = "crates/webhook_api" }
yarrbot_matrix_client = { path = "crates/matrix_client" }
