[package]
name = "yarrbot"
version = "0.5.8"
edition = "2021"

[[bin]]
name = "yarrbot"
path = "src/main.rs"

[workspace]
members = [
    "crates/db",
    "crates/webhook_api",
    "crates/common",
    "crates/matrix_client"
]

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.53"
actix-web = "4.0.0-rc.2"
actix = "0.12.0"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["std", "env-filter"] }
tracing-actix-web = "0.5.0-rc.2"
tracing-log = "0.1.2"
tracing-appender = "0.2.0"
tokio = "1.16.1"
yarrbot_common = { path = "crates/common" }
yarrbot_db = { path = "crates/db" }
yarrbot_webhook_api = { path = "crates/webhook_api" }
yarrbot_matrix_client = { path = "crates/matrix_client" }
