[package]
name = "yarrbot_common"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.7"
anyhow = "1.0.42"
uuid = { version = "= 0.8.2", features = ["v4"] }
base64 = "0.13.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
