[package]
name = "yarrbot_common"
version = "0.5.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.7"
anyhow = "1.0.53"
uuid = { version = "0.8.2", features = ["v4"] }
base64 = "0.13.0"
tokio = { version = "1.16.1", features = ["rt", "macros", "signal"] }
actix = "0.12.0"
tracing = "0.1.30"
