[package]
name = "yarrbot_db"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }
uuid = { version = "= 0.8.2", features = ["v4"] }
diesel_migrations = "1.4.0"
diesel-derive-enum = { version = "1", features = ["postgres"] }
strum = "0.21"
strum_macros = "0.21.1"
anyhow = "1.0.42"
tracing = "0.1"
tracing-subscriber = "0.2"
yarrbot_common = { path = "../common" }
