[package]
name = "yarrbot_db"
version = "0.5.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07"] }
uuid = { version = "0.8.2", features = ["v4"] }
diesel_migrations = "1.4.0"
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
strum = "0.23.0"
strum_macros = "0.23.1"
anyhow = "1.0.53"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
yarrbot_common = { path = "../common" }
