[package]
name = "yarrbot_matrix_client"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "0.4.1", features = ["encryption", "require_auth_for_profile_requests"] }
url = "2.2.2"
anyhow = "1.0.42"
log = "0.4"
itertools = "0.10.1"
tokio = { version = "1.0", features = ["rt"] }
futures = { version = "0.3.16", default-features = false, features = ["std", "async-await"] }
uuid = { version = "= 0.8.2", features = ["v4"] }
rand = { version = "0.8.4", features = ["small_rng"] }
async-trait = "0.1.51"
yarrbot_db = { path = "../db" }
yarrbot_common = { path = "../common" }
