[package]
name = "yarrbot_matrix_client"
version = "0.5.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "0.4.1", features = ["encryption", "require_auth_for_profile_requests"] }
url = "2.2.2"
anyhow = "1.0.53"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
tracing-futures = "0.2.5"
itertools = "0.10.3"
actix = "0.12.0"
tokio = { version = "1.16.1", features = ["rt"] }
futures = { version = "0.3.19", default-features = false, features = ["std", "async-await"] }
uuid = { version = "0.8.2", features = ["v4"] }
rand = { version = "0.8.4", features = ["small_rng"] }
async-trait = "0.1.52"
yarrbot_db = { path = "../db" }
yarrbot_common = { path = "../common" }
