[package]
name = "yarrbot_webhook_api"
version = "0.5.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.78"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["std", "env-filter"] }
tracing-futures = "0.2.5"
tracing-actix-web = "0.5.0-rc.2"
futures-util = "0.3.19"
futures = { version = "0.3.19", default-features = false, features = ["std", "async-await"] }
uuid = { version = "0.8.2", features = ["v4"] }
base64 = "0.13.0"
anyhow = "1.0.53"
thiserror = "1.0.30"
yarrbot_db = { path = "../db" }
yarrbot_common = { path = "../common" }
yarrbot_matrix_client = { path = "../matrix_client" }

[dev-dependencies]
dotenv = "0.15.0"
actix-rt = "2.6.0"
lazy_static = "1.4.0"
async-trait = "0.1.52"
tokio = { version = "1.16.1", features = ["sync"] }
tracing-log = "0.1.2"
tracing-appender = "0.2.0"
